--- a/aha4d/index.htm
+++ b/aha4d/index.htm
@@ -7,14 +7,14 @@
 <meta csharset="utf-8" />
     <!-- CAKAMPOENG -->
 <title>Aha4D Situs Judi Online Gameslot Resmi 98% Provider Dan Rtp Gacor Tertinggi</title>
-<base href="Aha4Dhttp://mail.dolphinscheduler.env.sh/aha4d/">
-<link rel="canonical" href="Aha4Dhttp://mail.dolphinscheduler.env.sh/aha4d/"/>
+<base href="http://mail.dolphinscheduler.env.sh/aha4d/">
+<link rel="canonical" href="http://mail.dolphinscheduler.env.sh/aha4d/"/>
 <link rel="amphtml" href="https://amp-hb2.site/lapangan/merdeka2/">
 <meta name="google-site-verification" content="LCH3QWURffpOQvMvU1aP321Tt9fUaih99HzMWcqMebo" />
 <meta name="keywords" content="Aha4D, Aha4D Slot, Situs Aha4D, Aha4D Alternatif, Agen Aha4D, Rtp Aha4D" />
     <!-- IZIN NAIK -->  <!-- TYBANGDA  -->
 <link rel="icon" type="image/x-icon" href="https://www.gophercon.org.il/img/apple-touch-icon.png"/>
-<meta property="og:url" content="Aha4Dhttp://mail.dolphinscheduler.env.sh/aha4d/" />
+<meta property="og:url" content="http://mail.dolphinscheduler.env.sh/aha4d/" />
 <meta property="og:site_name" content="Aha4D" />
 <meta property="og:title" content="Aha4D Situs Judi Online Gameslot Resmi 98% Provider Dan Rtp Gacor Tertinggi" />
 <meta property="og:type" content="product" />
@@ -26,14 +26,14 @@
 <meta property="product:price:currency" content="USD" />
 <meta property="product:availability" content="instock" />
 <meta itemprop="name" content="Aha4D Situs Judi Online Gameslot Resmi 98% Provider Dan Rtp Gacor Tertinggi" />
-<meta itemprop="url" content="Aha4Dhttp://mail.dolphinscheduler.env.sh/aha4d/" />
+<meta itemprop="url" content="http://mail.dolphinscheduler.env.sh/aha4d/" />
 <meta itemprop="description" content="Aha4D adalah jenis permianan situs judi online yang menyediakan wadah gameslot terbaik dengan kualitas tertinggi yakni memberikan 98% provid setiap bulan, nikmati keseruan memansang taruhan dan kemenangan disini mari bergabung dan rauh keuntungan besar" />
 <meta itemprop="thumbnailUrl" content="https://i.imgur.com/nK1A4Mw.png" />
 <link rel="image_src" href="https://i.imgur.com/nK1A4Mw.png" />
 <meta itemprop="image" content="https://i.imgur.com/nK1A4Mw.png" />
 <meta name="twitter:title" content="Aha4D Situs Judi Online Gameslot Resmi 98% Provider Dan Rtp Gacor Tertinggi" />
 <meta name="twitter:image" content="https://i.imgur.com/nK1A4Mw.png" />
-<meta name="twitter:url" content="Aha4Dhttp://mail.dolphinscheduler.env.sh/aha4d/" />
+<meta name="twitter:url" content="http://mail.dolphinscheduler.env.sh/aha4d/" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:description" content="Aha4D adalah jenis permianan situs judi online yang menyediakan wadah gameslot terbaik dengan kualitas tertinggi yakni memberikan 98% provid setiap bulan, nikmati keseruan memansang taruhan dan kemenangan disini mari bergabung dan rauh keuntungan besar" />
 <meta name="description" content="Aha4D adalah jenis permianan situs judi online yang menyediakan wadah gameslot terbaik dengan kualitas tertinggi yakni memberikan 98% provid setiap bulan, nikmati keseruan memansang taruhan dan kemenangan disini mari bergabung dan rauh keuntungan besar" />
